main/fluent/tests/ui/prevent_read_after_delete.stderr
error[E0502]: cannot borrow `model` as mutable because it is also borrowed as immutable
 --> tests/ui/prevent_read_after_delete.rs:8:5
  |
5 |     let project = model.current_project();
  |                   ----- immutable borrow occurs here
...
8 |     model.current_project_mut().delete_track(raw);
  |     ^^^^^ mutable borrow occurs here
9 |     track.guid();
  |     ----- immutable borrow later used here
